VideoDTO in/out split