@@ -2,23 +2,29 @@ package com.sa.youtube.dtos;
 
 import com.sa.youtube.models.Review;
 
+import jakarta.validation.constraints.Max;
+import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
 
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 
 public record ReviewDTO(
 
-        @Size(min = 0, max = 10)
+        @Min(value = 0)
+        @Max(value = 10)
         Integer rating,
 
         String text,
 
+        @NotNull
+        UUID userId,
+
         @NotBlank
-        UUID userID,
+        String videoId,
 
         @NotNull
         Long publishedAt
@@ -27,17 +33,16 @@ public record ReviewDTO(
 
         public ReviewDTO(Review review) {
             this (
-                    review.getRating(),
-                    review.getText(),
-                    review.getUser().getId(),
-                    review.getPublishedAt().getValue()
+                review.getRating(),
+                review.getText(),
+                review.getUser().getId(),
+                review.getVideo().getId(),
+                review.getPublishedAt().getValue()
             );
         }
 
-        public static List<ReviewDTO> toReviewDTOList(List<Review> reviewList) {
-            return reviewList.stream()
-                .map(review -> new ReviewDTO(review))
-                .collect(Collectors.toList());
+        public static List<ReviewDTO> toReviewDTOList(Set<Review> reviewList) {
+            return reviewList.stream().map(ReviewDTO::new).toList();
         }
 
     }
